[package]
name = "axpert-mitm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
mysql = "24.0.0"
pcap = "1.1.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.34.0"
watchpower-api = "0.0.5"
